// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot > 실제 typescript.yaml 로드 후 렌더링 결과 snapshot 1`] = `
"# Typescript

## Constraints

- DO NOT use interface. Use type aliases consistently.
- DO NOT use enum. Use const objects with inferred literal unions.
- DO NOT use any. Use unknown and narrow with runtime/type guards.
- DO NOT use non-null assertion (!). Handle null/undefined explicitly with ?. and ??.
- DO NOT use .then() chains for normal async flows. Use async/await.
- DO NOT throw raw strings. Throw Error objects and narrow caught errors from unknown.

## Guidelines

- Use arrow functions only. Annotate return types for exported functions.
- Use import type for type-only imports. Use absolute paths (@/...) only.
- Use as const for static config objects.
- Keep business logic in *.logic.ts and stateless helpers in *.util.ts.

## Decision Table

| When | Then | Avoid |
|------|------|-------|
| You feel forced to use an as assertion | Prefer schema parse (e.g., Zod) or explicit type guards first | Bypassing the type system with unchecked assertions |"
`;

exports[`Snapshot: renderForTool > claude-code snapshot 1`] = `
{
  "files": [
    {
      "content": "# Communication

## Constraints

- Be concise

## Guidelines

- Use Korean",
      "relativePath": ".claude/rules/communication.md",
    },
    {
      "content": "---
paths:
  - "**/*.ts"
  - "**/*.tsx"
---

# Typescript

## Constraints

- No any

## Guidelines

- Use arrow functions",
      "relativePath": ".claude/rules/typescript.md",
    },
  ],
  "tool": "claude-code",
}
`;

exports[`Snapshot: renderForTool > codex snapshot 1`] = `
{
  "domainContent": "# Typescript

## Constraints

- No any

## Guidelines

- Use arrow functions",
  "rootContent": "# Communication

## Constraints

- Be concise

## Guidelines

- Use Korean",
  "tool": "codex",
}
`;

exports[`Snapshot: renderForTool > gemini snapshot 1`] = `
{
  "domainContent": "# Typescript

## Constraints

- No any

## Guidelines

- Use arrow functions",
  "rootContent": "# Communication

## Constraints

- Be concise

## Guidelines

- Use Korean",
  "tool": "gemini",
}
`;
